test_programs/compile_failure/noirc_frontend_tests_cannot_use_prefix_minus_on_u32/src/main.nr

    fn main() {
        let x: u32 = 1;
        let _ = -x;
    }
    